DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Student__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <label>Advisor</label>
    <type>Text</type>
    <length>255</length>
</CustomField>