DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Student__c/fields/Class_Standing__c.field-meta.xml
<CustomField>
    <fullName>Class_Standing__c</fullName>
    <label>Class Standing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Freshman</fullName>
                </value>
                <value>
                    <fullName>Sophomore</fullName>
                </value>
                <value>
                    <fullName>Junior</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>