DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Student__c/fields/Honors__c.field-meta.xml
<CustomField>
    <fullName>Honors__c</fullName>
    <label>Honors</label>
    <type>Text</type>
    <length>255</length>
</CustomField>