DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Student__c/fields/Major__c.field-meta.xml
<CustomField>
    <fullName>Major__c</fullName>
    <label>Major</label>
    <type>Text</type>
    <length>255</length>
</CustomField>