DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Student__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Text</type>
    <length>255</length>
</CustomField>