DEMO TEMPLATES/schema/force-app/main/default/objects/Demo_Student__c/fields/Total_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Credits__c</fullName>
    <label>Total Credits</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>